--- a/index.html.html
+++ b/index.html.html
@@ -39,7 +39,7 @@
 
     <section id="hero">
         <div class="hero-background-slider">
-             <div class="hero-background-image" style="background-image: url('img/kin'); --slide-index: 0;"></div>
+             <div class="hero-background-image" style="background-image: url('img/IMG_4327'); --slide-index: 0;"></div>
             <div class="hero-background-image" style="background-image: url('img/IMG_4339.JPG'); --slide-index: 1;"></div>
             <div class="hero-background-image" style="background-image: url('img/IMG_4326.JPG'); --slide-index: 2;"></div>
         </div>
